<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.android.camera2.basic.openGL.GlRenderView
        android:id="@+id/render_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.example.android.camera.utils.AutoFitSurfaceView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@android:color/transparent" />

    <com.example.android.camera2.basic.camera.CameraButton
        android:id="@+id/camera_button"
        android:layout_width="@dimen/image_button_width"
        android:layout_height="@dimen/image_button_height"
        android:layout_marginBottom="@dimen/image_button_bottom_margin"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_shutter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/capture" />

    <Button
        android:id="@+id/switch_button"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:textColor="#FFA500"
        android:buttonTint="#FFA500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/switch_content"
        android:padding="@dimen/button_padding" />

    <RadioGroup
        android:id="@+id/rg_speed"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/record_speed_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_extra_slow"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/record_speed_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/video_extra_slow"
            android:textColor="@drawable/record_speed_button_text" />

        <RadioButton
            android:id="@+id/rb_slow"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/record_speed_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/video_slow"
            android:textColor="@drawable/record_speed_button_text" />

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/record_speed_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/video_normal"
            android:textColor="@drawable/record_speed_button_text" />

        <RadioButton
            android:id="@+id/rb_fast"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/record_speed_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/video_fast"
            android:textColor="@drawable/record_speed_button_text" />

        <RadioButton
            android:id="@+id/rb_extra_fast"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/record_speed_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/video_extra_fast"
            android:textColor="@drawable/record_speed_button_text" />
    </RadioGroup>


    <CheckBox
        android:id="@+id/beauty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beauty"
        android:textColor="#FFA500"
        android:buttonTint="#FFA500"
        app:layout_constraintBottom_toTopOf="@+id/rg_speed"
        app:layout_constraintEnd_toStartOf="@+id/bigEye"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button"
        app:layout_constraintVertical_bias="0.517" />

    <CheckBox
        android:id="@+id/bigEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/beauty"
        android:text="@string/bigEye"
        android:textColor="#FFA500"
        android:buttonTint="#FFA500"
        app:layout_constraintBottom_toTopOf="@+id/rg_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button" />

    <CheckBox
        android:id="@+id/stick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/bigEye"
        android:text="@string/stick"
        android:textColor="#FFA500"
        android:buttonTint="#FFA500"
        app:layout_constraintBottom_toTopOf="@+id/rg_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/bigEye"
        app:layout_constraintTop_toBottomOf="@+id/camera_button"
        app:layout_constraintVertical_bias="0.517" />

    <CheckBox
        android:id="@+id/capture_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/photo_mode"
        android:textColor="#FFA500"
        android:buttonTint="#FFA500"
        app:layout_constraintBottom_toBottomOf="@+id/camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toEndOf="@+id/camera_button"
        app:layout_constraintTop_toTopOf="@+id/camera_button" />

    <SeekBar
        android:id="@+id/exposureSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="10dp"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/saturationSeekBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/saturationSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="10dp"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/contrastSeekBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/contrastSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/brightSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="10dp"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrastSeekBar"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>